Repaired minor issues in spacings module.

--- a/scss/_spacing_settings.scss
+++ b/scss/_spacing_settings.scss
@@ -34,7 +34,7 @@ $generator-dimension-steps: 8; $generator-dimension-rhythm: 50;  // px 50,100,15
 // Turns class names from value based into incrementing index based.
 $index-classes: no; // yes/no
 $enable-child-selectors: no; // yes/no (default:no)
-$child-selector-extension: '--c > *';
+
 $selectors: short; // long/short
 $override-spacing: no; // yes/no > !important
 $override-dimensions: no; // yes/no > !important
